# amm-optimal-execution

./: .gitignore  README.md  conftest.py  pyproject.toml
agent/baselines/: convex_no_mev.py  gas_aware_greedy.py  protocol.py  rollout.py  single_dump.py  twap.py
agent/ppo/: buffer.py  cvar_ppo.py  policy.py  policy_adapter.py  trainer.py
data/: eth_rpc.py  feehistory_loader.py  gas_history.py  swap_replay.py  uniswap_v2_loader.py
data/snapshots/: feehistory_200_25105952.json  gas_latest_25103456.json  gas_window_3_25103456.json  reserves_weth-usdc_25103456.json  swaps_weth-usdc_25105452_25105952.parquet  swaps_weth-usdc_TEST_25096742_25106741.parquet  swaps_weth-usdc_TRAIN_25056742_25096741.parquet
env/: amm.py  flow_replay.py  gas_models.py  mev_bot.py
notebooks/: demo.html  demo.ipynb
scripts/: build_demo_notebook.py  calibrate.py  evaluate.py  render_phase3e.py  render_publication.py  run_full_live.py  stats_test.py  sweep.py  train_test_eval.py
tests/: test_data_calibration.py  test_phase1_amm_mev.py  test_phase2.py  test_phase3.py  test_phase3c.py
