[project]
name = "defi-execution"
version = "0.1.0"
description = "Optimal execution under MEV on constant-product AMMs."
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "gymnasium>=1.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "certifi>=2024.0",
    "torch>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "nbformat>=5.0",
    "jupyter>=1.0",
    "nbconvert>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.packages.find]
include = ["env*", "data*", "agent*"]
